# solana-fender

./: .gitignore  Cargo.toml  PROPOSAL.md  README.md
.github/workflows/: ci.yml  rust.yml
examples/anchor-example-program/: .gitignore  Anchor.toml  tsconfig.json
examples/anchor-example-program/programs/anchor-example-program/: Cargo.toml
examples/anchor-example-program/programs/anchor-example-program/src/: lib.rs
examples/anchor-example-program/tests/: index.ts
src/: lib.rs  main.rs
src/analyzers/: account_data_matching.rs  account_initialization.rs  account_reloading.rs  arbitrary_cpi.rs  bump_seed_canonicalization.rs  closing_accounts.rs  duplicate_mutable_accounts.rs  improper_instruction_introspection.rs  initialization_frontrunning.rs  insecure_randomness.rs  integer_overflow.rs  invalid_sysvar_accounts.rs  missing_owner.rs  mod.rs  pda_sharing.rs  precision_loss.rs  reentrancy.rs  seed_collision.rs  test_utils.rs  type_cosplay.rs  unauthorized_access.rs
src/models/: markdown.rs  mod.rs
