[package]
name = "solana_fender"
version = "0.1.0"
edition = "2021"
description = "Static analysis tool for Solana smart contracts"
authors = ["Cian githhub.com/cianyyz"]
license-file = "LICENSE.txt"
repository = "https://github.com/honey-guard/solana-fender"
readme = "README.md"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
anchor-syn = "0.29"
walkdir = "2.4"
